# tree-sitter-goasm

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.lua  build.zig  build.zig.zon  go.mod  go.sum  grammar.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  tree-sitter.json
.claude/: settings.json
.claude/skills/regen-parser/: SKILL.md
.claude/skills/test-bindings/: SKILL.md
bindings/c/: tree-sitter-goasm.h  tree-sitter-goasm.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_goasm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGoasmTests/: TreeSitterGoasmTests.swift
bindings/zig/: root.zig  test.zig
lua/tree-sitter-goasm/: init.lua
plugin/: tree-sitter-goasm.lua
queries/: highlights.scm  injections.scm  tags.scm
samples/: README.md  amd64.s  arm64.s  riscv64.s  syntax-gap-notes.md
src/: grammar.json  node-types.json  parser.c
test/: goid.s
test/corpus/: basics.txt  directives.txt  operands.txt  runtime_amd64.txt
tests/: goasm_query_symlinks_spec.lua
